--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg d-flex justify-content-between">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-between pt-5 ">
             <div class="logo hide"><img src="assets/header/logo.png" alt="Logo da Creators"></div>
             <div class="logo-right hide"><img src="assets/header/c.png" alt=""> </div>
         </nav>
@@ -48,37 +48,60 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="bg-selection">
-                        <div class="mb-4">
-                            <input type="text" class="form-control " placeholder="Seu nome">
+                        <!-- Begin Mailchimp Signup Form -->
+                        <div id="mc_embed_signup">
+                            <form
+                                action="https://llc.us14.list-manage.com/subscribe/post?u=eef0dd89a96a8d4d115efcf01&amp;id=49d7e547d4&amp;f_id=00e3fee0f0"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                class="validate" target="_self">
+                                <div id="mc_embed_signup_scroll">
+                                    <div class="mb-4">
+                                        <input type="text" value="" name="FNAME" class="form-control"
+                                            placeholder="Seu nome">
+                                    </div>
+                                    <div class="mb-4">
+                                        <input type="email" value="" name="EMAIL" class="required email form-control"
+                                            required placeholder="Email">
+                                    </div>
+                                    <div class="mb-4">
+                                        <input type="email" value="" name="EMAIL" class="required email form-control"
+                                            required placeholder="Confirme seu email">
+                                    </div>
+                                    <div class="mb-4">
+                                        <select name="MMERGE5" class=" form-control">
+                                            <option value="nulo">Eu sou</option>
+                                            <option>Creator / Influencer</option>
+                                            <option>Agente ou representante de creator/influencer</option>
+                                            <option>Agência (publicidade, RP, Comms, Influência, Digital, Content, etc
+                                            </option>
+                                            <option>Marca (Anunciante)</option>
+                                            <option>Rede Social (ex: trabalha no Insta, Twitter, Youtube, TikTok, etc)
+                                            </option>
+                                            <option>Veículo (ex: trabalho em jornal, revista, portal, TV, etc)</option>
+                                            <option>Profissional autônomo ou liberal</option>
+                                            <option>Academia (estudante ou professor(a))</option>
+                                            <option>Outros</option>
+                                        </select>
+                                    </div>
+                                    <div class="mb-4">
+                                        <input type="text" value="" name="FNAME" class="form-control"
+                                            placeholder="Nome da empresa">
+                                    </div>
+                                    <div class="mb-2 d-grid col-10 mx-auto">
+                                        <input type="submit" value="Garanta seu lugar" class="btn btn-subscribe"
+                                            style="color: white; border-radius: 30px; padding: 14px;">
+                                    </div>
+
+                                    <div class="privacity mt-4">
+                                        <p>Creators usa as informações que você fornece para te contatar sobre produtos
+                                            e serviços Creators. Para mais informações acesse nossa <span>Política de
+                                                Privacidade.</span></p>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="mb-4">
-                            <input type="text" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="mb-4">
-                            <input type="text" class="form-control" placeholder="Confirme seu email">
-                        </div>
-                        <div class="w-100 mb-4">
-                            <select id="inputState" class="form-select  ">
-                                <option selected class="dropdown-toggle">Eu sou</option>
-                                <option>1</option>
-                                <option>1</option>
-                                <option>1</option>
-                                <option>1</option>
-                                <option>1</option>
-                            </select>
-                        </div>
-                        <div class="mb-4">
-                            <input type="text" class="form-control" placeholder="Nome da empresa">
-                        </div>
-                        <div>
-                            <div class="d-grid col-10 mx-auto">
-                                <button class="btn btn-subscribe" type="button">Garanta seu lugar</button>
-                            </div>
-                        </div>
-                        <div class="privacity mt-4">
-                            <p>Creators usa as informações que você fornece para te contatar sobre produtos e serviços
-                                Creators. Para mais informações acesse nossa <span>Política de Privacidade.</span></p>
-                        </div>
+
+                        <!--End mc_embed_signup-->
                     </div>
                 </div>
             </div>
@@ -140,76 +163,61 @@
     </section>
     <section>
         <div class="container space-paragraph">
-            <div class="row d-flex investor">
+            <div class="row d-flex investor pb-5">
                 <p>Quem acredita na Creators</p>
-                <div class="col-md-6 d-flex justify-content-around">
-                    <a href="#"><img src="assets/footer/google.png" alt=""></a>
-                    <a href="#"><img src="assets/footer/ifood.png" alt=""></a>
-                    <a href="#"><img src="assets/footer/vice.png" alt=""></a>
-                </div>
-                <div class="col-md-6  d-flex justify-content-around">
+
+                <div class="col">
                     <a href="#"><img src="assets/footer/globoplay.png" alt=""></a>
+
+                </div>
+                <div class="col">
                     <a href="#"><img src="assets/footer/vmlyer.png" alt=""></a>
+
+                </div>
+                <div class="col">
                     <a href="#"><img src="assets/footer/nubank.png" alt=""></a>
+
+                </div>
+                <div class="col">
+                    <a href="#"><img src="assets/footer/google.png" alt=""></a>
+
+                </div>
+                <div class="col">
+                    <a href="#"><img src="assets/footer/ifood.png" alt=""></a>
+
+                </div>
+                <div class="col">
+                    <a href="#"><img src="assets/footer/vice.png" alt=""></a>
+
                 </div>
             </div>
     </section>
 
     <section>
-        <!-- <footer class="space-paragraph">
-            <div class="container ">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <img src="assets/footer/logofooter.png" class="py-5" alt="">
-                        <div class="links d-flex">
-                            <li class="d-inline-block">
-                                <a href="#">Termos e condições
-                                </a>
-                            </li>
-                            <li class="d-inline-block">
-                                <a href="#">Política de privacidade
-                                </a>
-                            </li>
-                            <li class="d-inline-block">
-                                <a href="#">hello@creators.llc</a>
-                            </li>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 d-flex align-items-end d-flex flex-column jus">
-                        <ul class="d-block p-0 ps-2">
-                            <li class="d-inline-block me-2">
-                                <a href="https://www.instagram.com/creators.llc/" target="_blank"><i
-                                        class="fa-brands fa-instagram"></i></a>
-                            </li>
-                            <li class="d-inline-block me-2">
-                                <a href="https://www.linkedin.com/company/creators-llc/" target="_blank"><i
-                                        class="fa-brands fa-linkedin"></i></a>
-                            </li>
-                            <li class="d-inline-block me-2">
-                                <a href="https://www.facebook.com/creators.llc/" target="_blank"><i
-                                        class="fa-brands fa-facebook"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer> -->
         <footer>
             <div class="container">
-                <div class="row justify-content-between footer">
-                    <div class="col-md-6 ">
-                        <img src="assets/footer/logofooter.png" class="py-5" alt="">
+                <div class="row footer">
+                    <div class="col-md-6">
+                        <a href="https://creators.llc/" target="_blank"><img src="assets/footer/logo.png" class="py-5"
+                                alt="">
+                            <h3>POWERFUL INFLUENCE <br>
+                                MARKETING PLATFORM</h3>
+                        </a>
                         <div class="list-terms">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-md">
-                                        <a href="#">Termos e condições</a>
+                                    <div class="col-md-3">
+                                        <a href="https://creators.llc/documents/Termos_de_Uso_Creators.pdf"
+                                            target="_blank">Termos e
+                                            condições</a>
                                     </div>
-                                    <div class="col-md">
-                                        <a href="#">Política de privacidade</a>
+                                    <div class="col-md-3">
+                                        <a href="https://creators.llc/documents/Politica_de_privacidade.pdf"
+                                            target="_blank">Política de
+                                            privacidade</a>
                                     </div>
-                                    <div class="col-md">
-                                        <a href="#">hello@creators.llc</a>
+                                    <div class="col-md-3">
+                                        <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +242,6 @@
                     </div>
         </footer>
     </section>
-
 
 </body>
 
