--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between pt-5 ">
-            <div class="logo hide"><img src="assets/header/logo.png" alt="Logo da Creators"></div>
-            <div class="logo-right hide"><img src="assets/header/c.png" alt=""> </div>
+            <a href="https://creators.llc/" target="_blank">
+                <div class="logo hide"><img src="assets/header/logo.png" alt="Logo da Creators"></div>
+            </a>
+            <a href="https://creators.llc/" target="_blank">
+                <div class="logo-right hide"><img src="assets/header/c.png" alt=""></div>
+            </a>
+
         </nav>
     </div>
     <section>
@@ -29,7 +34,7 @@
                         <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="">
                         <div class="info-first">
                             <h1>surfando nos <br> <span>assuntos do momento</span></h1>
-                            <div class=" transmission d-flex">
+                            <div class="transmission d-flex">
                                 <img src="assets/header/c.png" alt="">
                                 <div class="schedule">
                                     <h1>Quarta-Feira <br>20 Julho | 19h</h1>
@@ -94,8 +99,8 @@
 
                                     <div class="privacity mt-4">
                                         <p>Creators usa as informações que você fornece para te contatar sobre produtos
-                                            e serviços Creators. Para mais informações acesse nossa <span>Política de
-                                                Privacidade.</span></p>
+                                            e serviços Creators. Para mais informações acesse nossa <span><a href="https://creators.llc/documents/Politica_de_privacidade.pdf" target="_blank">Política de
+                                                Privacidade.</a></span></p>
                                     </div>
                                 </div>
                             </form>
@@ -206,7 +211,7 @@
                         <div class="list-terms">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-md-3">
+                                    <!-- <div class="col-md-3">
                                         <a href="https://creators.llc/documents/Termos_de_Uso_Creators.pdf"
                                             target="_blank">Termos e
                                             condições</a>
@@ -215,7 +220,7 @@
                                         <a href="https://creators.llc/documents/Politica_de_privacidade.pdf"
                                             target="_blank">Política de
                                             privacidade</a>
-                                    </div>
+                                    </div> -->
                                     <div class="col-md-3">
                                         <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
                                     </div>
