--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
                     Já parou pra pensar em quando você tagueia seu público-alvo, que cor essa pessoa tem? E o gênero?
                     <br> O que você leva em consideração ao compor um casting de creators para uma campanha de
                     influência? <br>
-                    <div class="mb-4">
-                       <p> Com mediação de Nohoa Arcanjo, Fundadora e Growth Leader da Creators LLC, vamos discutir as
+                <div class="mb-4">
+                    <p> Com mediação de Nohoa Arcanjo, Fundadora e Growth Leader da Creators LLC, vamos discutir as
                         principais <br> estratégias do Marketing de Influência na diversidade e inclusão e como trazer a
                         pluralidade na publicidade <br> de grandes marcas.</p>
-                    </div>
+                </div>
                 </p>
             </div>
 
@@ -245,14 +245,15 @@
                     <div class="col-md card-host">
                         <img src="assets/main/nanna.jpg" alt="">
                         <h1 class="names">Nanna Pretto</h1>
-                        <p> Creator @dica_de_mae & Influence Marketing Manager no <span
-                                style="font-weight: 800">Nubank</span></p>
+                        <p> Creator <span style="font-weight: 800">@dica_de_mae</span> & Influence Marketing Manager no
+                            <span style="font-weight: 800">Nubank</span></p>
 
                     </div>
                     <div class="col-md card-host">
                         <img src="assets/main/stella.yeshua.jpg" alt="">
                         <h1 class="names">Stella Yeshua</h1>
-                        <p>Creator @stella.yeshua, Rapper & Colunista @voguebrasil @buzzfeedbrasil </p>
+                        <p>Creator @stella.yeshua <span style="font-weight: 800"> Rapper & Colunista @voguebrasil
+                                @buzzfeedbrasil </span></p>
                     </div>
                 </div>
             </div>
@@ -263,28 +264,31 @@
             <h3>06.10 | 15h</h3>
             <div class="info-first mt-4">
                 <h1>CRIATIVIDADE PARA <br> <span>ENVOLVER A COMUNIDADE</span></h1>
-                <h2 class="mt-4">Como usar a criatividade pra  <br>
+                <h2 class="mt-4">Como usar a criatividade pra <br>
                     envolver a comunidade no TikTok</h2>
                 <p class="mt-4">
-                    Quem usa o TikTok já deve ter reparado: cada feed é único. Ele é criado com base nos seus interesses e 
+                    Quem usa o TikTok já deve ter reparado: cada feed é único. Ele é criado com base nos seus interesses
+                    e
                     <br>também nos conteúdos que estão bombando na plataforma. <br>
-                    <div class="mb-4">
-                       <p>
-                        Isso traz oportunidades pra marcas, tanto pra alcançarem novos públicos quanto pra fazer suas campanhas  <br> inspirarem as pessoas a criarem novos conteúdos. Mas qual a receita pra envolver e ganhar o coração da <br> da comunidade no TikTok? </p>
-                    </div>
+                <div class="mb-4">
+                    <p>
+                        Isso traz oportunidades pra marcas, tanto pra alcançarem novos públicos quanto pra fazer suas
+                        campanhas <br> inspirarem as pessoas a criarem novos conteúdos. Mas qual a receita pra envolver
+                        e ganhar o coração da <br> da comunidade no TikTok? </p>
+                </div>
 
-                    <h2 class="my-5 tittle" style="padding-bottom: 30px">Conheça a participante</h2>
+                <h2 class="my-5 tittle" style="padding-bottom: 30px">Conheça a participante</h2>
 
-                    <div class="col-md-3 card-host m-0 pb-5">
-                        <img src="assets/main/dindi.jfif" alt="">
-                        <h1 class="names">
-                            <span> Host </span>Nohoa Arcanjo <br>
-
-                        </h1>
-                        <p>
-                            Co-Founder & Growth Leader na <span style="font-weight: 800">Creators LLC</span>
-                        </p>
-                    </div>
+                <div class="col-md-3 card-host m-0 pb-5">
+                    <img src="assets/main/dindi.jfif" alt="">
+                    <h1 class="names">
+                        Dindi Coelho 🏳️‍🌈 <br>
+                        @dindicoelho
+                    </h1>
+                    <p>
+                        Creative Strategist Lead no<span style="font-weight: 800">TikTok </span>
+                    </p>
+                </div>
 
                 </p>
             </div>
@@ -304,7 +308,7 @@
                 </div>
             </div>
 
-            
+
         </div>
     </section>
     <section>
