--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                     <div class="insider position-absolute">
                         <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="">
                         <div class="info-first">
-                            <h1>Influência <br> <span>inclusiva & <br> CRIATIVIDADE</span></h1>
-                            <h3>Como desenvolver estratégias <br>de marketing de influência inclusivas</h3>
+                            <h1 style="font-size: 60px; font-weight: 500">Influência <br> <span>inclusiva & <br> CRIATIVIDADE</span></h1>
                             <div class="transmission d-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                     fill="none">
@@ -208,7 +207,7 @@
         <div class="container space-paragraph section-2" style="margin-top: 150px">
             <h3>06.10 | 13h</h3>
             <div class="info-first mt-4">
-                <h1>INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
+                <h1 style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
                 <h2 class="mt-4">Como desenvolver estratégias <br>
                     de marketing de influência inclusivas</h2>
                 <p class="mt-4">
@@ -233,7 +232,7 @@
 
                         </h1>
                         <p>
-                            Co-Founder & Growth Leader na <span style="font-weight: 800">Creators LLC</span>
+                            Co-Founder & Growth Leader na <span style="font-weight: 800"><a href="https://creators.llc/">Creators LLC</a></span>
                         </p>
                     </div>
 
@@ -245,14 +244,14 @@
                     <div class="col-md card-host">
                         <img src="assets/main/nanna.jpg" alt="">
                         <h1 class="names">Nanna Pretto</h1>
-                        <p> Creator <span style="font-weight: 800">@dica_de_mae</span> & Influence Marketing Manager no
+                        <p> Creator <span style="font-weight: 800"><a href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence Marketing Manager no
                             <span style="font-weight: 800">Nubank</span></p>
 
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/stella.yeshua.jpg" alt="">
+                        <img src="assets/main/stella.png" alt="">
                         <h1 class="names">Stella Yeshua</h1>
-                        <p>Creator @stella.yeshua <span style="font-weight: 800"> Rapper & Colunista @voguebrasil
+                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/">@stella.yeshua </a><span style="font-weight: 800"> Rapper & Colunista @voguebrasil
                                 @buzzfeedbrasil </span></p>
                     </div>
                 </div>
@@ -263,7 +262,7 @@
         <div class="container section-2 space-paragraph">
             <h3>06.10 | 15h</h3>
             <div class="info-first mt-4">
-                <h1>CRIATIVIDADE PARA <br> <span>ENVOLVER A COMUNIDADE</span></h1>
+                <h1 style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER A COMUNIDADE</span></h1>
                 <h2 class="mt-4">Como usar a criatividade pra <br>
                     envolver a comunidade no TikTok</h2>
                 <p class="mt-4">
@@ -283,7 +282,7 @@
                     <img src="assets/main/dindi.jfif" alt="">
                     <h1 class="names">
                         Dindi Coelho 🏳️‍🌈 <br>
-                        @dindicoelho
+                        <a href="https://www.tiktok.com/@dindicoelho" target="_blank">@dindicoelho</a>
                     </h1>
                     <p>
                         Creative Strategist Lead no<span style="font-weight: 800">TikTok </span>
