--- a/obrigado.html
+++ b/obrigado.html
@@ -139,19 +139,18 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    
-                        <div class="bg-selection">
-                            <div class="text-center">
-                                <img class="mb-5" src="assets/header/logo.svg" alt="logo creators">
-                                <h1 style="font-size:20px; font-weight: 700;" class="mb-5">Sua inscrição para o Creators Insider está garantida.</h1>
-                                <p style="color: white; font-size: 15px;">Enviaremos a confirmação para seu e-mail com todas as informações do evento para você não perder nenhum detalhe.</p>
-    
-                                <div class="mb-4 d-grid col-10 mx-auto">
-                                    <button type="submit" class=" mt-4 btn-subscribe button">
-                                        <a href="index.html" style="text-decoration: none; color: white;">Ok, entendi</a>
-                                    </button>
-                                </div>
-                            </div>   
+                    <div class="bg-selection">
+                        <div class="text-center">
+                            <img class="mb-5" src="assets/header/logo.svg" alt="logo creators">
+                            <h1 style="font-size:20px; font-weight: 700;" class="mb-5" >Sua inscrição para o Creators Insider está garantida.</h1>
+                            <p style="color: white; font-size: 15px;">Enviaremos a confirmação para seu e-mail com todas as informações do evento para você não perder nenhum detalhe.</p>
+
+                            <div class="mb-4 d-grid col-10 mx-auto">
+                                <button type="submit" class=" mt-4 btn-subscribe button">
+                                    <a href="index.html" style="text-decoration: none; color: white;">Ok, entendi</a>
+                                </button>
+                            </div>
+                        </div>                       
                     </div>
                 </div>
             </div>
@@ -204,7 +203,7 @@
 
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/stella.yeshua.jpg" alt="">
+                        <img src="assets/main/stella_yeshua.png" alt="">
                         <h1 class="names">Stella Yeshua</h1>
                         <p>Creator @stella.yeshua <span style="font-weight: 800"> Rapper & Colunista @voguebrasil
                                 @buzzfeedbrasil </span></p>
