--- a/obrigado.html
+++ b/obrigado.html
@@ -215,7 +215,7 @@
         <div class="container section-2 space-paragraph">
             <h3>06.10 | 15h</h3>
             <div class="info-first mt-4">
-                <h1 style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER A COMUNIDADE</span></h1>
+                <h1 style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER</span></h1>
                 <h2 class="mt-4">Como usar a criatividade pra <br>
                     envolver a comunidade no TikTok</h2>
                 <p class="mt-4">
