--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="insider position-absolute">
                         <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="">
                         <div class="info-first">
-                            <h1 style="font-size: 60px; font-weight: 500">Influência <br> <span>inclusiva & <br> CRIATIVIDADE</span></h1>
+                            <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br> <span>inclusiva & <br> criatividade</span></h1>
                             <div class="transmission d-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                     fill="none">
@@ -207,7 +207,7 @@
         <div class="container space-paragraph section-2" style="margin-top: 150px">
             <h3>06.10 | 13h</h3>
             <div class="info-first mt-4">
-                <h1 style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
+                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
                 <h2 class="mt-4">Como desenvolver estratégias <br>
                     de marketing de influência inclusivas</h2>
                 <p class="mt-4">
@@ -262,7 +262,7 @@
         <div class="container section-2 space-paragraph">
             <h3>06.10 | 15h</h3>
             <div class="info-first mt-4">
-                <h1 style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER</span></h1>
+                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER </span></h1>
                 <h2 class="mt-4">Como usar a criatividade pra <br>
                     envolver a comunidade no TikTok</h2>
                 <p class="mt-4">
