--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <p>
                         Isso traz oportunidades pra marcas, tanto pra alcançarem novos públicos quanto pra fazer suas
                         campanhas <br> inspirarem as pessoas a criarem novos conteúdos. Mas qual a receita pra envolver
-                        e ganhar o coração da <br> da comunidade no TikTok? </p>
+                        e ganhar o coração <br> da comunidade no TikTok? </p>
                 </div>
 
                 <h2 class="my-5 tittle" style="padding-bottom: 30px">Conheça a participante</h2>
@@ -285,7 +285,7 @@
                         <a href="https://www.tiktok.com/@dindicoelho" target="_blank">@dindicoelho</a>
                     </h1>
                     <p>
-                        Creative Strategist Lead no<span style="font-weight: 800">TikTok </span>
+                        Creative Strategist Lead no <span style="font-weight: 800">TikTok</span>
                     </p>
                 </div>
 
@@ -299,7 +299,7 @@
                     <p class="color-paragraph">Conectamos criadores com marcas que desejam escalar sua comunicação e
                         criar conversas com suas comunidades.
                     </p>
-                    <button class="btn hide btn-subscribe" type="button"><a href="https://creators.llc/"
+                    <button class="btn btn-subscribe" type="button"><a href="https://creators.llc/"
                             target="_blank">Faça seu cadastro</a></button>
                 </div>
                 <div class="col-md-8 teste">
@@ -348,7 +348,7 @@
             <div class="container">
                 <div class="row footer">
                     <div class="col-md-6">
-                        <a href="https://creators.llc/" target="_blank"><svg width="190" height="auto"
+                        <a href="https://creators.llc/" target="_blank"><svg width="200" height="auto"
                                 viewBox="0 0 245 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_281_2252)">
                                     <g clip-path="url(#clip1_281_2252)">
@@ -383,28 +383,26 @@
                                 </g>
                                 <defs>
                                     <clipPath id="clip0_281_2252">
-                                        <rect width="244.641" height="49.0769" fill="white" />
+                                        <rect width="244.641" height="auto" fill="white" />
                                     </clipPath>
                                     <clipPath id="clip1_281_2252">
-                                        <rect width="244.641" height="49.0769" fill="white" />
+                                        <rect width="244.641" height="auto" fill="white" />
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <h3 style="margin-top:-60px">POWERFUL INFLUENCE <br>
+                            <h3 style="margin-top:-50px">POWERFUL INFLUENCE <br>
                                 MARKETING PLATFORM</h3>
                         </a>
                         <div class="list-terms">
-                            <div class="container">
                                 <div class="row">
                                     <div class="col-md-3 mb-4">
                                         <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
                                     </div>
-                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 d-flex align-items-end d-flex flex-column pt-5 social-media  ">
+                    <div class="col-lg-6 d-flex align-items-end d-flex flex-column pt-5 social-media ">
                         <ul class="d-block p-0 ps-2">
                             <li class="d-inline-block me-2">
                                 <a href="https://www.instagram.com/creators.llc/" target="_blank"><i
@@ -415,8 +413,7 @@
                                         class="fa-brands fa-linkedin"></i></a>
                             </li>
                             <li class="d-inline-block me-2">
-                                <a href="https://www.facebook.com/creators.llc/" target="_blank"><i
-                                        class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/creators.llc/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
                             </li>
                         </ul>
                     </div>
