--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                             <option>Agência (publicidade, RP, Comms, Influência, Digital, Content, etc
                                             </option>
                                             <option>Marca (Anunciante)</option>
-                                            <option>Rede Social (ex: trabalha no Insta, Twitter, Youtube, TikTok, etc)
+                                            <option>Rede Social (ex: trabalho no Insta, Twitter, Youtube, TikTok, etc)
                                             </option>
                                             <option>Veículo (ex: trabalho em jornal, revista, portal, TV, etc)</option>
                                             <option>Profissional autônomo ou liberal</option>
