--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <div id="mc_embed_signup_scroll">
 
                                     <div class="mb-4">
-                                        <input type="text" value="" name="FNAME" class="form-control"
+                                        <input type="text" value="" name="FNAME" class="form-control required"
                                             placeholder="Seu nome">
                                     </div>
                                     <div class="mb-4">
