--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="assets/header/vinheta.png"/>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://creators.llc/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -141,7 +142,6 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="bg-selection">
-
                         <div id="mc_embed_signup">
                             <form
                                 action="https://llc.us14.list-manage.com/subscribe/post?u=eef0dd89a96a8d4d115efcf01&amp;id=61e965c51a&amp;f_id=0053ffe0f0"
