--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="col-md card-host">
                         <img src="assets/main/pedro_cruz.jpg" alt="">
                         <h1 class="names">Pedro Cruz 🏳️‍🌈</h1>
-                        <p> LinkedIn Top Voice & Head of Culture na <span style="font-weight: 800">SOKO</span></p>
+                        <p> LinkedIn Top Voice e Colunista na <span style="font-weight: 800">Fast Company</span></p>
                     </div>
                     <div class="col-md card-host">
                         <img src="assets/main/nanna.jpg" alt="">
@@ -253,8 +253,7 @@
                     <div class="col-md card-host">
                         <img src="assets/main/stella.png" alt="">
                         <h1 class="names">Stella Yeshua</h1>
-                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/">@stella.yeshua </a><span style="font-weight: 800"> Rapper & Colunista @voguebrasil
-                                @buzzfeedbrasil </span></p>
+                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span style="font-weight: 800">@stella.yeshua e Rapper </span></p>
                     </div>
                 </div>
             </div>
