--- a/obrigado.html
+++ b/obrigado.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="assets/header/vinheta.png"/>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://creators.llc/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,6 +15,7 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e99973526a.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <title>Creators Insider</title>
 </head>
 
 <body>
@@ -158,7 +160,7 @@
     </section>
 
     <section>
-        <div class="container space-paragraph section-2" style="margin-top: 70px">
+        <div class="container space-paragraph section-2" style="margin-top: 150px">
             <h3>06.10 | 13h</h3>
             <div class="info-first mt-4">
                 <h1 class="influ-title" style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
@@ -193,7 +195,7 @@
                     <div class="col-md card-host">
                         <img src="assets/main/pedro_cruz.jpg" alt="">
                         <h1 class="names">Pedro Cruz 🏳️‍🌈</h1>
-                        <p> LinkedIn Top Voice & Head of Culture na <span style="font-weight: 800">SOKO</span></p>
+                        <p> LinkedIn Top Voice e Colunista na <span style="font-weight: 800">Fast Company</span></p>
                     </div>
                     <div class="col-md card-host">
                         <img src="assets/main/nanna.jpg" alt="">
@@ -205,8 +207,7 @@
                     <div class="col-md card-host">
                         <img src="assets/main/stella.png" alt="">
                         <h1 class="names">Stella Yeshua</h1>
-                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/">@stella.yeshua </a><span style="font-weight: 800"> Rapper & Colunista @voguebrasil
-                                @buzzfeedbrasil </span></p>
+                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span style="font-weight: 800">@stella.yeshua e Rapper</span></p>
                     </div>
                 </div>
             </div>
