--- a/obrigado.html
+++ b/obrigado.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="assets/header/vinheta.png"/>
+    <meta name="description" content="Página de Insider, influência inclusiva e criatividade">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
+    <meta name="author" content="Creators.llc">
+    <meta property="og:description" content="Página de Insider, influência inclusiva e criatividade" />
+    <meta property="og:image" content="assets/header/vinheta.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://creators.llc/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +27,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between pt-5 ">
-            <a href="https://creators.llc/" target="_blank">
+            <a href="https://creators.llc/" target="_blank" aria-label="ir ao site creators.llc">
                 <div class="logo hide">
                     <svg width="125" height="auto" viewBox="0 0 245 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_281_2252)">
@@ -65,7 +71,7 @@
                     </svg>
                 </div>
             </a>
-            <a href="https://creators.llc/" target="_blank">
+            <a href="https://creators.llc/" target="_blank" aria-label="ir ao site creators.llc">
                 <div class="logo-right hide"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                         viewBox="0 0 32 32" fill="none">
                         <path
@@ -98,7 +104,9 @@
                     <div class="insider position-absolute">
                         <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="">
                         <div class="info-first">
-                            <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br> <span>inclusiva & <br> criatividade</span></h1>
+                            <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br>
+                                <span>inclusiva & <br> criatividade</span>
+                            </h1>
                             <div class="transmission d-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                     fill="none">
@@ -144,15 +152,17 @@
                     <div class="bg-selection">
                         <div class="text-center">
                             <img class="mb-5" src="assets/header/logo.svg" alt="logo creators">
-                            <h1 style="font-size:20px; font-weight: 700;" class="mb-5" >Sua inscrição para o Creators Insider está garantida.</h1>
-                            <p style="color: white; font-size: 15px;">Enviaremos a confirmação para seu e-mail com todas as informações do evento para você não perder nenhum detalhe.</p>
+                            <h1 style="font-size:20px; font-weight: 700;" class="mb-5">Sua inscrição para o Creators
+                                Insider está garantida.</h1>
+                            <p style="color: white; font-size: 15px;">Enviaremos a confirmação para seu e-mail com todas
+                                as informações do evento para você não perder nenhum detalhe.</p>
 
                             <div class="mb-4 d-grid col-10 mx-auto">
                                 <button type="submit" class=" mt-4 btn-subscribe button">
                                     <a href="index.html" style="text-decoration: none; color: white;">Ok, entendi</a>
                                 </button>
                             </div>
-                        </div>                       
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,7 +173,8 @@
         <div class="container space-paragraph section-2" style="margin-top: 150px">
             <h3>06.10 | 13h</h3>
             <div class="info-first mt-4">
-                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span></h1>
+                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">INFLUÊNCIA <br> <span>INCLUSIVA</span>
+                </h1>
                 <h2 class="mt-4">Como desenvolver estratégias <br>
                     de marketing de influência inclusivas</h2>
                 <p class="mt-4">
@@ -188,7 +199,8 @@
 
                         </h1>
                         <p>
-                            Co-Founder & Growth Leader na <span style="font-weight: 800"><a href="https://creators.llc/">Creators LLC</a></span>
+                            Co-Founder & Growth Leader na <span style="font-weight: 800"><a
+                                    href="https://creators.llc/">Creators LLC</a></span>
                         </p>
                     </div>
 
@@ -200,14 +212,18 @@
                     <div class="col-md card-host">
                         <img src="assets/main/nanna.jpg" alt="">
                         <h1 class="names">Nanna Pretto</h1>
-                        <p> Creator <span style="font-weight: 800"><a href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence Marketing Manager no
-                            <span style="font-weight: 800">Nubank</span></p>
+                        <p> Creator <span style="font-weight: 800"><a
+                                    href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence
+                            Marketing Manager no
+                            <span style="font-weight: 800">Nubank</span>
+                        </p>
 
                     </div>
                     <div class="col-md card-host">
                         <img src="assets/main/stella.png" alt="">
                         <h1 class="names">Stella Yeshua</h1>
-                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span style="font-weight: 800">@stella.yeshua e Rapper</span></p>
+                        <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span
+                                style="font-weight: 800">@stella.yeshua e Rapper</span></p>
                     </div>
                 </div>
             </div>
@@ -217,7 +233,8 @@
         <div class="container section-2 space-paragraph">
             <h3>06.10 | 15h</h3>
             <div class="info-first mt-4">
-                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER </span></h1>
+                <h1 class="influ-title" style="font-size: 60px; font-weight: 500">CRIATIVIDADE PARA <br> <span>ENVOLVER
+                    </span></h1>
                 <h2 class="mt-4">Como usar a criatividade pra <br>
                     envolver a comunidade no TikTok</h2>
                 <p class="mt-4">
@@ -254,8 +271,8 @@
                     <p class="color-paragraph">Conectamos criadores com marcas que desejam escalar sua comunicação e
                         criar conversas com suas comunidades.
                     </p>
-                    <button class="btn btn-subscribe" type="button"><a href="https://creators.llc/"
-                            target="_blank">Faça seu cadastro</a></button>
+                    <button class="btn btn-subscribe" type="button"><a href="https://creators.llc/" target="_blank">Faça
+                            seu cadastro</a></button>
                 </div>
                 <div class="col-md-8 teste">
                     <img src="assets/main/insidercreators2nd.svg" alt="">
@@ -349,10 +366,10 @@
                                 MARKETING PLATFORM</h3>
                         </a>
                         <div class="list-terms">
-                                <div class="row">
-                                    <div class="col-md-3 mb-4">
-                                        <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
-                                    </div>
+                            <div class="row">
+                                <div class="col-md-3 mb-4">
+                                    <a href="mailto:hello@creators.llc" target="_blank">hello@creators.llc</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -360,15 +377,19 @@
                     <div class="col-lg-6 d-flex align-items-end d-flex flex-column pt-5 social-media ">
                         <ul class="d-block p-0 ps-2">
                             <li class="d-inline-block me-2">
-                                <a href="https://www.instagram.com/creators.llc/" target="_blank"><i
-                                        class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/creators.llc/" target="_blank"
+                                    aria-label="ir a página oficial da Creators.llc no Instagram"><img
+                                        src="assets/instagram.svg" alt="instagram logo"></a>
                             </li>
                             <li class="d-inline-block me-2">
-                                <a href="https://www.linkedin.com/company/creators-llc/" target="_blank"><i
-                                        class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/company/creators-llc/" target="_blank"
+                                    aria-label="ir ao site LinkedIn"><img src="assets/linkedin.svg"
+                                        alt="linkedin logo"></a>
                             </li>
                             <li class="d-inline-block me-2">
-                                <a href="https://www.facebook.com/creators.llc/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                                <a href="https://www.facebook.com/creators.llc/" target="_blank"
+                                    aria-label="ir a página oficial da Creators.llc no Facebook"><img
+                                        src="assets/facebook.svg" alt="logo facebook"></a>
                             </li>
                         </ul>
                     </div>
