--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="assets/header/vinheta.png"/>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="https://creators.llc/favicon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/e99973526a.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <title>Creators Insider</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Página de Insider, influência inclusiva e criatividade">
+        <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
+        <meta name="author" content="Creators.llc">
+        <meta property="og:description" content="Página de Insider, influência inclusiva e criatividade" />
+        <meta property="og:image" content="assets/header/vinheta.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="628" />
+        <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="https://creators.llc/favicon.png">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+            crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/e99973526a.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <title>Creators Insider</title>
+    </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between pt-5 ">
-            <a href="https://creators.llc/" target="_blank">
+            <a href="https://creators.llc/" target="_blank" aria-label="ir ao site creators.llc">
                 <div class="logo hide">
                     <svg width="125" height="auto" viewBox="0 0 245 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_281_2252)">
@@ -406,15 +412,16 @@
                     <div class="col-lg-6 d-flex align-items-end d-flex flex-column pt-5 social-media ">
                         <ul class="d-block p-0 ps-2">
                             <li class="d-inline-block me-2">
-                                <a href="https://www.instagram.com/creators.llc/" target="_blank"><i
-                                        class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/creators.llc/" target="_blank"><img
+                                        src="assets/instagram.svg" alt="instagram logo"></a>
                             </li>
                             <li class="d-inline-block me-2">
-                                <a href="https://www.linkedin.com/company/creators-llc/" target="_blank"><i
-                                        class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/company/creators-llc/" target="_blank"><img
+                                        src="assets/linkedin.svg" alt="linkedin logo"></a>
                             </li>
                             <li class="d-inline-block me-2">
-                                <a href="https://www.facebook.com/creators.llc/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                                <a href="https://www.facebook.com/creators.llc/" target="_blank"><img
+                                        src="assets/facebook.svg" alt="logo facebook"></a>
                             </li>
                         </ul>
                     </div>
