--- a/obrigado.html
+++ b/obrigado.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
     <meta name="author" content="Creators.llc">
     <meta property="og:description" content="Página de Insider, influência inclusiva e criatividade" />
-    <meta property="og:image" content="assets/header/vinheta.png" />
+    <meta property="og:image" content="https://creators.llc/images/share.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
     <link rel="stylesheet" href="style.css">
