ajuste de acessbilidade

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </svg>
                 </div>
             </a>
-            <a href="https://creators.llc/" target="_blank">
+            <a href="https://creators.llc/" target="_blank" aria-label="ir ao site creators.llc">
                 <div class="logo-right hide"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                         viewBox="0 0 32 32" fill="none">
                         <path
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="insider position-absolute">
-                        <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="">
+                        <img class="insider-creator-img" src="assets/header/insidercreator.png" alt="" aria-hidden="true">
                         <div class="info-first">
                             <h1 class="influ-title" style="font-size: 60px; font-weight: 500">Influência <br> <span>inclusiva & <br> criatividade</span></h1>
                             <div class="transmission d-flex">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="card-creators">
-                        <img src="assets/header/card.png" alt="">
+                        <img src="assets/header/card.png" alt=""  aria-hidden="true">
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -234,7 +234,7 @@
             <div class="container">
                 <div class="row justify-content-around ">
                     <div class="col-md card-host">
-                        <img src="assets/main/nohoa.jpg" alt="">
+                        <img src="assets/main/nohoa.jpg" alt=""  aria-hidden="true">
                         <h1 class="names">
                             <span> Host </span>Nohoa Arcanjo <br>
 
@@ -245,19 +245,19 @@
                     </div>
 
                     <div class="col-md card-host">
-                        <img src="assets/main/pedro_cruz.jpg" alt="">
+                        <img src="assets/main/pedro_cruz.jpg" alt=""  aria-hidden="true">
                         <h1 class="names">Pedro Cruz 🏳️‍🌈</h1>
                         <p> LinkedIn Top Voice e Colunista na <span style="font-weight: 800">Fast Company</span></p>
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/nanna.jpg" alt="">
+                        <img src="assets/main/nanna.jpg" alt=""  aria-hidden="true">
                         <h1 class="names">Nanna Pretto</h1>
                         <p> Creator <span style="font-weight: 800"><a href="https://www.instagram.com/dica_de_mae/">@dica_de_mae</a></span> & Influence Marketing Manager no
                             <span style="font-weight: 800">Nubank</span></p>
 
                     </div>
                     <div class="col-md card-host">
-                        <img src="assets/main/stella.png" alt="">
+                        <img src="assets/main/stella.png" alt=""  aria-hidden="true">
                         <h1 class="names">Stella Yeshua</h1>
                         <p>Creator <a href="https://www.instagram.com/stella.yeshua/"></a><span style="font-weight: 800">@stella.yeshua e Rapper </span></p>
                     </div>
@@ -286,7 +286,7 @@
                 <h2 class="my-5 tittle" style="padding-bottom: 30px">Conheça a participante</h2>
 
                 <div class="col-md-3 card-host m-0 pb-5">
-                    <img src="assets/main/dindi.jfif" alt="">
+                    <img src="assets/main/dindi.jfif" alt=""  aria-hidden="true">
                     <h1 class="names">
                         Dindi Coelho 🏳️‍🌈 <br>
                         <a href="https://www.tiktok.com/@dindicoelho" target="_blank">@dindicoelho</a>
@@ -310,7 +310,7 @@
                             target="_blank">Faça seu cadastro</a></button>
                 </div>
                 <div class="col-md-8 teste">
-                    <img src="assets/main/insidercreators2nd.svg" alt="">
+                    <img src="assets/main/insidercreators2nd.svg" alt=""  aria-hidden="true">
                 </div>
             </div>
 
