--- a/obrigado.html
+++ b/obrigado.html
@@ -25,6 +25,27 @@
 </head>
 
 <body>
+
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-90265209-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    
+        <!-- Global site tag (gtag.js) - Google Ads: 626645894 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-626645894"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'AW-626645894');
+        gtag('config', 'AW-448730715');
+    </script>
+
     <div class="container">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between pt-5 ">
             <a href="https://creators.llc/" target="_blank" aria-label="ir ao site creators.llc">
